# data-tracker

./: .gitignore  .golangci.yml  Cargo.toml  Makefile  README.md  build.rs  db.sqlite3  docker-compose.yaml  go.mod  go.sum  test.sqlite3
.circleci/: config.yml
.github/workflows/: codecov.yml  rust.yml
api/: colors.go  token.go  wrap.go
backend/: go.mod  go.sum
backend/binance/: account.go  all_orders.go  berror.go  cli.go  cli_test.go  error.go  models.go  order.go  price.go  request_interface.go  time.go  trades.go
backend/lambda/: build.sh
cmd/: main.go
datatracker-rust/: Cargo.toml
datatracker-rust/src/: lib.rs  main.rs  tracker.rs  wrap.rs
env/: env.go
migrations/2022-03-29-160136_init/: up.sql
migrations/2022-03-29-161013_location/: up.sql
migrations/2022-06-28-200447_reports/: up.sql
proto/: cli.proto
sheets/api/: token.go
sheets/cmd/: main.go
src/: handler.rs  lib.rs  main.rs  persistance.rs  schema.rs  shutdown.rs  task.rs  tracker.rs  wrap.rs
src/connector/: factory.rs  http.rs  kafka.rs  mod.rs  psql.rs  string.rs
src/core/: channels.rs  direction.rs  handler.rs  intype.rs  manager.rs  mod.rs  task.rs  timestamp.rs  tracker.rs  types.rs
src/data/: getter.rs  kafka.rs  mod.rs
src/error/: error.rs  types.rs
src/lang/: engine.rs  eval.rs  language.rs  lexer.rs  mod.rs  node.rs  process.rs  variable.rs
src/models/: location.rs  mod.rs  report.rs  task.rs
src/persistance/: in_memory.rs  interface.rs  mod.rs  (+1 more)
terraform/: lambda.tf  lambda_publisher.tf  lambda_subscriber.tf  provider.tf
test/: api_test.go  helper_test.go  integration.go  integration_test.go  tracker_test.go
tests/: integration_tests.rs  kafka.rs  psql.rs
tracker/: client.go  tracker.go
(+38 files in other folders)
