[package]
name = "datatracker_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.52"
ntest = "0.7.3"
rand = "0.8.4"
rusqlite = "0.26.3"