[package]
name = "datatracker_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "^3.0"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^ 6.0"
tokio = { version = "1.15.0", features = ["rt"] }
env_logger = "0.9.0"
log = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.52"
ntest = "0.7.3"
rand = "0.8.4"
diesel = { version = "1.4.4", features = ["sqlite", "numeric"] }
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "1.1.2", features = ["sqlite"]}
derivative = "2.2.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
mockall = "0.11.0"
tonic-build = "0.7.0"
tonic = "0.7.0"
prost = "0.10"
tokio-stream = "0.1.8"
futures = "0.3.21"
tui = "0.17"
crossterm = "0.22"
tokio-postgres = "0.7.5"

[build-dependencies]
tonic-build = "0.7.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]